# tutorials

./: .gitignore  Axb.py  CS_table_No2_No4.csv  ClassRectangle.py  FFT.py  README.md  fermat_little_theorem.py  marginal_profit.py  pickle.py  plot_sinx.py  qlpnnmos.c3p.txt  rec.pic
Physics/: animation.py  doublePendulum.py  rain.py
algorithm/: min_step.cpp  quicksort.cpp  softmax.py  tsp.py  tsp2.py  tsp_single_loop.py  tsp_subpath.py
angularjs/: demo.html
arduino_python/02_python_serial/: plot.py  plot_bokeh.py  readUno.py  run_client.bat  run_server.bat
arduino_python/WebServer/: WebServer.ino
arduino_python/_01_uno_millis/: _01_uno_millis.ino
arduino_python/nrf24/: server.py
bidirectional/: main.py
bidirectional client-to-client realtime draggable objects/: run.bat
bidirectional client-to-client realtime draggable objects/templates/: d3_drag.html  sliderbar.html
bidirectional/templates/: d3_click.html  d3_graph.html  index.html
bitstring/: conversion.py
bokeh/: hello.py  scatter1.py  spring.py
bs4/: get_paragraph.py  get_paragraph_100pages.py  set.ipynb  text.txt
bs4/.ipynb_checkpoints/: StartUp-checkpoint.ipynb
cpp/: hello.cpp
cuda/: AddVectors.cu
cuda/cuda/: CMakeLists.txt  cuda.cu  main.cpp
cuda/cuda-build/: CMakeCUDA.cbp  CMakeCUDA.exe.resource.txt  CMakeCUDA.exp  CMakeCUDA.ilk  CMakeCUDA.lib  CMakeCache.txt  Makefile  cmake_install.cmake
cuda/cuda2/: CMakeLists.txt  main.cpp  test.cu  test.h
cuda/cuda2-build/: CMakeCache.txt  Makefile  cmake_install.cmake  cuda2.cbp
cuda/cv/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  mycv.sln  mycv.vcxproj  mycv.vcxproj.filters
cuda/cv/Win32/Release/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.write.1.tlog
cuda/cv/mycv.dir/Release/mycv.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.write.1.tlog  mycv.lastbuildstate
cuda/cv/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog
cuda/cv/x64/Release/mycv.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog
cuda/cv2/: main.cpp
cuda/cv3/: CMakeLists.txt
cuda/gl/: CMakeLists.txt  main.cpp
cuda/gl-build/: CMakeCache.txt  Makefile  MyTex.cbp  MyTex.exe.resource.txt  MyTex.ilk  cmake_install.cmake
cuda/mytex/: CMakeLists.txt
cuda/mytex-build/: CMakeCache.txt  Makefile  cmake_install.cmake  mytex.cbp  mytex.exe.resource.txt  mytex.ilk
cuda/mytex2/: CMakeLists.txt  device.cu  device.h  main.cpp
cuda/mytex2-build/: CMakeCache.txt  Makefile  cmake_install.cmake  mytex2.cbp  mytex2.exe.resource.txt  mytex2.exp  mytex2.ilk  mytex2.lib
cuda/mytex3/: CMakeLists.txt  device.cu  device.h  main.cpp  main.cu
cuda/mytex3-build/: CMakeCache.txt  Makefile  cmake_install.cmake  mytex3.cbp  mytex3.exe.resource.txt  mytex3.exp  mytex3.ilk  mytex3.lib
cuda/pbo/: CMakeLists.txt  CMakeLists2.txt  CMakeLists3.txt  With thanks to Kamil Saykali of the EdCenter_.html  device.cu  main.cpp
cuda/pbo-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  pbo.sln  pbo.vcxproj  pbo.vcxproj.filters
cuda/pbo-build2/: CMakeCache.txt  Makefile  cmake_install.cmake  pbo.cbp  pbo.exe.resource.txt  pbo.exp  pbo.ilk  pbo.lib
cuda/pbo2/: device.cu  device.h  main.cpp  readme.txt
cuda/pbo2-build/: CMakeCache.txt  Makefile  cmake_install.cmake  pbo.cbp  pbo.exe.resource.txt  pbo.exp  pbo.ilk  pbo.lib
cuda/pbo3/: CMakeLists.txt  device.cu  device.h  main.cpp
cuda/pbo3-build/: CMakeCache.txt  Makefile  cmake_install.cmake  pbo.cbp  pbo.exe.resource.txt  pbo.exp  (+2 more)
cython/: Untitled1.ipynb  demo_cython.c  demo_cython.pyx  demo_python.py  fib.c  setup.py  withnp.ipynb
d3/: 01_selection.html  02_enter_and_exit.html  03_transition.html  04_barChart_div.html  05_svg.html  06_svg_graph.html  07_fireball.html
django/: note.txt  readme.md
docxtpl/: Untitled.ipynb  generated_doc.docx  my_word_template.docx
entropy/: plotH.py
flask/: db.sqlite  demo_msql.py  flask101.py  weatherStation.py
git_demo/: readme.txt
gl/wave/: CMakeLists.txt  main.cpp  mymath.cpp  mymath.h
google/: directions.txt
iddcdt_day2/: 00adder.py  01guess.py  cards.py
intro_python_numpy/: generator.py  myclass.py  mygenerator.py  numerical_method.py  super_class.py
ipcluster/: kernel.py  parallel_sum.py  start_cluster.py  sum_stupid.py
kivy/: animation.py  fib.py
mysql/: cloudsql_gen1.py  demo.py
notebooks/: Basic Python.ipynb  out_tree.pic  parallel forest.ipynb
pandas/: cs401.py  cs401.xlsx  cs401_out.xlsx  get_sheet.py  pandas_demo.py
pygame/: demo_pygame.py
randomforest/: data_spiral.py  dataset.py  node.py
socket/: parallelScanner.ipynb  scanPort.py
socketio_click/: main.py
turtle/: fractal_tree.py  number.py  tree.py  triangle.py
vispy/: cloud.py
(+261 files in other folders)
